--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Summer Camp Activities</title>
+  <title>Devops Activities</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <h1>Summer Camp Activities</h1>
+  <h1>Devops Activities</h1>
   <ul>
     <li>
       <img src="swimming.jpg" alt="Swimming">
